# MemChain

./: .gitignore  README.md  config.ini  database.py  diaries.db  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  webPage.py
api/: __init__.py  memchain_server.py
api/apps/: diaries_app.py  llm_api.py
api/db/: database.py  models.py
api/models/: __init__.py  schemas.py
api/utils/: config_load.py  project_path.py
conf/: config.ini
llm/: llm_api.py
routers/: diaries.py
utils/: config_load.py  project_path.py
web/: web_server.py
